--- a/SARSA.ipynb
+++ b/SARSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbOe8PnOo4kr0q3bk0/k3+",
+      "authorship_tag": "ABX9TyPOUSDI6M+g+KQMaMt2trL0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,30 @@
       ],
       "metadata": {
         "id": "bADwYShn2u4n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## The $Q$ and $V$ Functions\n",
+        "The $Q$-function measures the value of state-action pairs $(s,a)$ under a particular policy $\\pi$. The value of $(s,a)$ is the expected cumulative discounted reward from taking action $a$ in state $s$, and then continuing to act under policy $\\pi$.  \n",
+        "\n",
+        "- $Q^{\\pi}(s,a)$ provides a quantitative value for each move; this value can be used to decide on the best move (action) to make in a particular state. \n",
+        "\n",
+        "- $Q^{\\pi}(s,a)$ has the benefit of giving agents a direct method for acting. Agents can calculate the $Q^{\\pi}(s,a)$ for each action available in a particular state, and select the action with the highest value. "
+      ],
+      "metadata": {
+        "id": "ZSnez1us5qsK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Temporal Difference Learning\n",
+        "How do we learn a Q-function using TD-learning? The main idea is to use neural network which produces Q-value estimates given $(s,a)$ pairs as inputs. This is known as value network. "
+      ],
+      "metadata": {
+        "id": "kuIpXa6ALSdR"
       }
     }
   ]
